--- a/all.html
+++ b/all.html
@@ -9,7 +9,7 @@ layout: default
 </div>
 <div class="pageTitle">All Posts</div>
 
-{% include license.html %}
+<!--{% include license.html %} -->
 
 {% assign lastMonth = '' %}
 {% for post in site.posts %}
